--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "",
+  "author": "Maksym <maksymsydorovych@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemailer": "^6.9.1"
-  }
+  },
+  "repository": "git@github.com:makssydorovych/email-backend.git"
 }
