--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=5000
-GMAIL_EMAIL=maksymsydorovych@gmail.com
-GMAIL_PASSWORD=Pomaranch1+
+PORT=5001
+EMAIL=maksymsydorovych@gmail.com
+PASSWORD=Pomaranch1+
 const email = process.env.GMAIL_EMAIL;
 const password = process.env.GMAIL_PASSWORD;
