--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "nodemailer": "^6.9.1"
   },
-  "repository": "git@github.com:makssydorovych/email-backend.git"
+  "repository": "git@github.com:makssydorovych/email-backend.git",
+  "devDependencies": {
+    "nodemon": "^2.0.21"
+  }
 }
