--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-PORT=5001
+
 EMAIL=maksymsydorovych@gmail.com
-PASSWORD=Pomaranch1+
-const email = process.env.GMAIL_EMAIL;
-const password = process.env.GMAIL_PASSWORD;
+PASSWORD=xhkbfmlcphjddddf
+
