--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "gmail-nodejs",
+  "name": "express-products-vercel",
   "version": "1.0.0",
   "description": "",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "watch": "tsc -w",
+    "dev": "nodemon --inspect dist/index.js",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
-  "author": "Maksym <maksymsydorovych@gmail.com>",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.1"
+    "mongodb": "^4.11.0"
   },
-
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.5",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
